--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <body>
 
 <a >
-    <img src="/imgs/lp.png" alt="Banner Web" class="banner-image banner-desktop">
-    <img src="/imgs/lp.png" alt="Banner Mobile" class="banner-image banner-mobile">
+    <img src="imgs/lp.png" alt="Banner Web" class="banner-image banner-desktop">
+    <img src="imgs/lp.png" alt="Banner Mobile" class="banner-image banner-mobile">
 </a>
 
 
